frontend/bisonfe.output
Grammaire

    0 $accept: program $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | '(' expression ')'

    4 postfix_expression: primary_expression
    5                   | postfix_expression '(' ')'
    6                   | postfix_expression '(' argument_expression_list ')'
    7                   | postfix_expression '.' IDENTIFIER
    8                   | postfix_expression PTR_OP IDENTIFIER

    9 argument_expression_list: expression
   10                         | argument_expression_list ',' expression

   11 unary_expression: postfix_expression
   12                 | unary_operator unary_expression
   13                 | SIZEOF unary_expression

   14 unary_operator: '&'
   15               | '*'
   16               | '-'

   17 multiplicative_expression: unary_expression
   18                          | multiplicative_expression '*' unary_expression
   19                          | multiplicative_expression '/' unary_expression

   20 additive_expression: multiplicative_expression
   21                    | additive_expression '+' multiplicative_expression
   22                    | additive_expression '-' multiplicative_expression

   23 relational_expression: additive_expression
   24                      | relational_expression '<' additive_expression
   25                      | relational_expression '>' additive_expression
   26                      | relational_expression LE_OP additive_expression
   27                      | relational_expression GE_OP additive_expression

   28 equality_expression: relational_expression
   29                    | equality_expression EQ_OP relational_expression
   30                    | equality_expression NE_OP relational_expression

   31 logical_and_expression: equality_expression
   32                       | logical_and_expression AND_OP equality_expression

   33 logical_or_expression: logical_and_expression
   34                      | logical_or_expression OR_OP logical_and_expression

   35 expression: logical_or_expression
   36           | unary_expression '=' expression

   37 declaration: declaration_specifiers declarator ';'
   38            | struct_specifier ';'

   39 declaration_specifiers: EXTERN type_specifier
   40                       | type_specifier

   41 type_specifier: VOID
   42               | INT
   43               | struct_specifier

   44 struct_specifier: STRUCT IDENTIFIER '{' struct_declaration_list '}'
   45                 | STRUCT '{' struct_declaration_list '}'
   46                 | STRUCT IDENTIFIER

   47 struct_declaration_list: struct_declaration
   48                        | struct_declaration_list struct_declaration

   49 struct_declaration: type_specifier declarator ';'

   50 declarator: '*' direct_declarator
   51           | direct_declarator

   52 direct_declarator: IDENTIFIER
   53                  | '(' declarator ')'
   54                  | direct_declarator '(' parameter_list ')'
   55                  | direct_declarator '(' ')'

   56 parameter_list: parameter_declaration
   57               | parameter_list ',' parameter_declaration

   58 parameter_declaration: declaration_specifiers declarator

   59 statement: compound_statement
   60          | expression_statement
   61          | selection_statement
   62          | iteration_statement
   63          | jump_statement

   64 compound_statement: '{' '}'
   65                   | '{' statement_list '}'
   66                   | '{' declaration_list '}'
   67                   | '{' declaration_list statement_list '}'

   68 declaration_list: declaration
   69                 | declaration_list declaration

   70 statement_list: statement
   71               | statement_list statement

   72 expression_statement: ';'
   73                     | expression ';'

   74 selection_statement: IF '(' expression ')' statement
   75                    | IF '(' expression ')' statement ELSE statement

   76 iteration_statement: WHILE '(' expression ')' statement
   77                    | FOR '(' expression_statement expression_statement expression ')' statement

   78 jump_statement: RETURN ';'
   79               | RETURN expression ';'

   80 program: external_declaration
   81        | program external_declaration

   82 external_declaration: function_definition
   83                     | declaration

   84 function_definition: declaration_specifiers declarator compound_statement


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '&' <all> (38) 14
    '(' <all> (40) 3 5 6 53 54 55 74 75 76 77
    ')' <all> (41) 3 5 6 53 54 55 74 75 76 77
    '*' <all> (42) 15 18 50
    '+' (43) 21
    ',' (44) 10 57
    '-' <all> (45) 16 22
    '.' (46) 7
    '/' (47) 19
    ';' <all> (59) 37 38 49 72 73 78 79
    '<' (60) 24
    '=' (61) 36
    '>' (62) 25
    '{' <all> (123) 44 45 64 65 66 67
    '}' <all> (125) 44 45 64 65 66 67
    error (256)
    SIZEOF <all> (258) 13
    PTR_OP <all> (259) 8
    LE_OP <all> (260) 26
    GE_OP <all> (261) 27
    EQ_OP <all> (262) 29
    NE_OP <all> (263) 30
    AND_OP <all> (264) 32
    OR_OP <all> (265) 34
    EXTERN <all> (266) 39
    INT <all> (267) 42
    VOID <all> (268) 41
    STRUCT <all> (269) 44 45 46
    IF <all> (270) 74 75
    ELSE <all> (271) 75
    WHILE <all> (272) 76
    FOR <all> (273) 77
    RETURN <all> (274) 78 79
    IDENTIFIER <nom> (275) 1 7 8 44 46 52
    CONSTANT <nombre> (276) 2
    MOINS (277)
    THEN (278)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (39)
        à gauche: 0
    primary_expression <all> (40)
        à gauche: 1 2 3
        à droite: 4
    postfix_expression <all> (41)
        à gauche: 4 5 6 7 8
        à droite: 5 6 7 8 11
    argument_expression_list <all> (42)
        à gauche: 9 10
        à droite: 6 10
    unary_expression <all> (43)
        à gauche: 11 12 13
        à droite: 12 13 17 18 19 36
    unary_operator <all> (44)
        à gauche: 14 15 16
        à droite: 12
    multiplicative_expression <all> (45)
        à gauche: 17 18 19
        à droite: 18 19 20 21 22
    additive_expression <all> (46)
        à gauche: 20 21 22
        à droite: 21 22 23 24 25 26 27
    relational_expression <all> (47)
        à gauche: 23 24 25 26 27
        à droite: 24 25 26 27 28 29 30
    equality_expression <all> (48)
        à gauche: 28 29 30
        à droite: 29 30 31 32
    logical_and_expression <all> (49)
        à gauche: 31 32
        à droite: 32 33 34
    logical_or_expression <all> (50)
        à gauche: 33 34
        à droite: 34 35
    expression <all> (51)
        à gauche: 35 36
        à droite: 3 9 10 36 73 74 75 76 77 79
    declaration <all> (52)
        à gauche: 37 38
        à droite: 68 69 83
    declaration_specifiers <all> (53)
        à gauche: 39 40
        à droite: 37 58 84
    type_specifier <all> (54)
        à gauche: 41 42 43
        à droite: 39 40 49
    struct_specifier <all> (55)
        à gauche: 44 45 46
        à droite: 38 43
    struct_declaration_list <all> (56)
        à gauche: 47 48
        à droite: 44 45 48
    struct_declaration <all> (57)
        à gauche: 49
        à droite: 47 48
    declarator <all> (58)
        à gauche: 50 51
        à droite: 37 49 53 58 84
    direct_declarator <all> (59)
        à gauche: 52 53 54 55
        à droite: 50 51 54 55
    parameter_list <all> (60)
        à gauche: 56 57
        à droite: 54 57
    parameter_declaration <all> (61)
        à gauche: 58
        à droite: 56 57
    statement <all> (62)
        à gauche: 59 60 61 62 63
        à droite: 70 71 74 75 76 77
    compound_statement <all> (63)
        à gauche: 64 65 66 67
        à droite: 59 84
    declaration_list <all> (64)
        à gauche: 68 69
        à droite: 66 67 69
    statement_list <all> (65)
        à gauche: 70 71
        à droite: 65 67 71
    expression_statement <all> (66)
        à gauche: 72 73
        à droite: 60 77
    selection_statement <all> (67)
        à gauche: 74 75
        à droite: 61
    iteration_statement <all> (68)
        à gauche: 76 77
        à droite: 62
    jump_statement <all> (69)
        à gauche: 78 79
        à droite: 63
    program <all> (70)
        à gauche: 80 81
        à droite: 0 81
    external_declaration <all> (71)
        à gauche: 82 83
        à droite: 80 81
    function_definition <all> (72)
        à gauche: 84
        à droite: 82


État 0

    0 $accept: . program $end

    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    declaration             aller à l'état 5
    declaration_specifiers  aller à l'état 6
    type_specifier          aller à l'état 7
    struct_specifier        aller à l'état 8
    program                 aller à l'état 9
    external_declaration    aller à l'état 10
    function_definition     aller à l'état 11


État 1

   39 declaration_specifiers: EXTERN . type_specifier

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    type_specifier    aller à l'état 12
    struct_specifier  aller à l'état 13


État 2

   42 type_specifier: INT .

    $défaut  réduction par utilisation de la règle 42 (type_specifier)


État 3

   41 type_specifier: VOID .

    $défaut  réduction par utilisation de la règle 41 (type_specifier)


État 4

   44 struct_specifier: STRUCT . IDENTIFIER '{' struct_declaration_list '}'
   45                 | STRUCT . '{' struct_declaration_list '}'
   46                 | STRUCT . IDENTIFIER

    '{'         décalage et aller à l'état 14
    IDENTIFIER  décalage et aller à l'état 15


État 5

   83 external_declaration: declaration .

    $défaut  réduction par utilisation de la règle 83 (external_declaration)


État 6

   37 declaration: declaration_specifiers . declarator ';'
   84 function_definition: declaration_specifiers . declarator compound_statement

    '('         décalage et aller à l'état 16
    '*'         décalage et aller à l'état 17
    IDENTIFIER  décalage et aller à l'état 18

    declarator         aller à l'état 19
    direct_declarator  aller à l'état 20


État 7

   40 declaration_specifiers: type_specifier .

    $défaut  réduction par utilisation de la règle 40 (declaration_specifiers)


État 8

   38 declaration: struct_specifier . ';'
   43 type_specifier: struct_specifier .

    ';'  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 43 (type_specifier)


État 9

    0 $accept: program . $end
   81 program: program . external_declaration

    $end    décalage et aller à l'état 22
    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    declaration             aller à l'état 5
    declaration_specifiers  aller à l'état 6
    type_specifier          aller à l'état 7
    struct_specifier        aller à l'état 8
    external_declaration    aller à l'état 23
    function_definition     aller à l'état 11


État 10

   80 program: external_declaration .

    $défaut  réduction par utilisation de la règle 80 (program)


État 11

   82 external_declaration: function_definition .

    $défaut  réduction par utilisation de la règle 82 (external_declaration)


État 12

   39 declaration_specifiers: EXTERN type_specifier .

    $défaut  réduction par utilisation de la règle 39 (declaration_specifiers)


État 13

   43 type_specifier: struct_specifier .

    $défaut  réduction par utilisation de la règle 43 (type_specifier)


État 14

   45 struct_specifier: STRUCT '{' . struct_declaration_list '}'

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    type_specifier           aller à l'état 24
    struct_specifier         aller à l'état 13
    struct_declaration_list  aller à l'état 25
    struct_declaration       aller à l'état 26


État 15

   44 struct_specifier: STRUCT IDENTIFIER . '{' struct_declaration_list '}'
   46                 | STRUCT IDENTIFIER .

    '{'  décalage et aller à l'état 27

    $défaut  réduction par utilisation de la règle 46 (struct_specifier)


État 16

   53 direct_declarator: '(' . declarator ')'

    '('         décalage et aller à l'état 16
    '*'         décalage et aller à l'état 17
    IDENTIFIER  décalage et aller à l'état 18

    declarator         aller à l'état 28
    direct_declarator  aller à l'état 20


État 17

   50 declarator: '*' . direct_declarator

    '('         décalage et aller à l'état 16
    IDENTIFIER  décalage et aller à l'état 18

    direct_declarator  aller à l'état 29


État 18

   52 direct_declarator: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 52 (direct_declarator)


État 19

   37 declaration: declaration_specifiers declarator . ';'
   84 function_definition: declaration_specifiers declarator . compound_statement

    '{'  décalage et aller à l'état 30
    ';'  décalage et aller à l'état 31

    compound_statement  aller à l'état 32


État 20

   51 declarator: direct_declarator .
   54 direct_declarator: direct_declarator . '(' parameter_list ')'
   55                  | direct_declarator . '(' ')'

    '('  décalage et aller à l'état 33

    $défaut  réduction par utilisation de la règle 51 (declarator)


État 21

   38 declaration: struct_specifier ';' .

    $défaut  réduction par utilisation de la règle 38 (declaration)


État 22

    0 $accept: program $end .

    $défaut  accepter


État 23

   81 program: program external_declaration .

    $défaut  réduction par utilisation de la règle 81 (program)


État 24

   49 struct_declaration: type_specifier . declarator ';'

    '('         décalage et aller à l'état 16
    '*'         décalage et aller à l'état 17
    IDENTIFIER  décalage et aller à l'état 18

    declarator         aller à l'état 34
    direct_declarator  aller à l'état 20


État 25

   45 struct_specifier: STRUCT '{' struct_declaration_list . '}'
   48 struct_declaration_list: struct_declaration_list . struct_declaration

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4
    '}'     décalage et aller à l'état 35

    type_specifier      aller à l'état 24
    struct_specifier    aller à l'état 13
    struct_declaration  aller à l'état 36


État 26

   47 struct_declaration_list: struct_declaration .

    $défaut  réduction par utilisation de la règle 47 (struct_declaration_list)


État 27

   44 struct_specifier: STRUCT IDENTIFIER '{' . struct_declaration_list '}'

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4

    type_specifier           aller à l'état 24
    struct_specifier         aller à l'état 13
    struct_declaration_list  aller à l'état 37
    struct_declaration       aller à l'état 26


État 28

   53 direct_declarator: '(' declarator . ')'

    ')'  décalage et aller à l'état 38


État 29

   50 declarator: '*' direct_declarator .
   54 direct_declarator: direct_declarator . '(' parameter_list ')'
   55                  | direct_declarator . '(' ')'

    '('  décalage et aller à l'état 33

    $défaut  réduction par utilisation de la règle 50 (declarator)


État 30

   64 compound_statement: '{' . '}'
   65                   | '{' . statement_list '}'
   66                   | '{' . declaration_list '}'
   67                   | '{' . declaration_list statement_list '}'

    SIZEOF      décalage et aller à l'état 39
    EXTERN      décalage et aller à l'état 1
    INT         décalage et aller à l'état 2
    VOID        décalage et aller à l'état 3
    STRUCT      décalage et aller à l'état 4
    IF          décalage et aller à l'état 40
    WHILE       décalage et aller à l'état 41
    FOR         décalage et aller à l'état 42
    RETURN      décalage et aller à l'état 43
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    '{'         décalage et aller à l'état 30
    '}'         décalage et aller à l'état 48
    ';'         décalage et aller à l'état 49
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 62
    declaration                aller à l'état 63
    declaration_specifiers     aller à l'état 64
    type_specifier             aller à l'état 7
    struct_specifier           aller à l'état 8
    statement                  aller à l'état 65
    compound_statement         aller à l'état 66
    declaration_list           aller à l'état 67
    statement_list             aller à l'état 68
    expression_statement       aller à l'état 69
    selection_statement        aller à l'état 70
    iteration_statement        aller à l'état 71
    jump_statement             aller à l'état 72


État 31

   37 declaration: declaration_specifiers declarator ';' .

    $défaut  réduction par utilisation de la règle 37 (declaration)


État 32

   84 function_definition: declaration_specifiers declarator compound_statement .

    $défaut  réduction par utilisation de la règle 84 (function_definition)


État 33

   54 direct_declarator: direct_declarator '(' . parameter_list ')'
   55                  | direct_declarator '(' . ')'

    EXTERN  décalage et aller à l'état 1
    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4
    ')'     décalage et aller à l'état 73

    declaration_specifiers  aller à l'état 74
    type_specifier          aller à l'état 7
    struct_specifier        aller à l'état 13
    parameter_list          aller à l'état 75
    parameter_declaration   aller à l'état 76


État 34

   49 struct_declaration: type_specifier declarator . ';'

    ';'  décalage et aller à l'état 77


État 35

   45 struct_specifier: STRUCT '{' struct_declaration_list '}' .

    $défaut  réduction par utilisation de la règle 45 (struct_specifier)


État 36

   48 struct_declaration_list: struct_declaration_list struct_declaration .

    $défaut  réduction par utilisation de la règle 48 (struct_declaration_list)


État 37

   44 struct_specifier: STRUCT IDENTIFIER '{' struct_declaration_list . '}'
   48 struct_declaration_list: struct_declaration_list . struct_declaration

    INT     décalage et aller à l'état 2
    VOID    décalage et aller à l'état 3
    STRUCT  décalage et aller à l'état 4
    '}'     décalage et aller à l'état 78

    type_specifier      aller à l'état 24
    struct_specifier    aller à l'état 13
    struct_declaration  aller à l'état 36


État 38

   53 direct_declarator: '(' declarator ')' .

    $défaut  réduction par utilisation de la règle 53 (direct_declarator)


État 39

   13 unary_expression: SIZEOF . unary_expression

    SIZEOF      décalage et aller à l'état 39
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression  aller à l'état 52
    postfix_expression  aller à l'état 53
    unary_expression    aller à l'état 79
    unary_operator      aller à l'état 55


État 40

   74 selection_statement: IF . '(' expression ')' statement
   75                    | IF . '(' expression ')' statement ELSE statement

    '('  décalage et aller à l'état 80


État 41

   76 iteration_statement: WHILE . '(' expression ')' statement

    '('  décalage et aller à l'état 81


État 42

   77 iteration_statement: FOR . '(' expression_statement expression_statement expression ')' statement

    '('  décalage et aller à l'état 82


État 43

   78 jump_statement: RETURN . ';'
   79               | RETURN . expression ';'

    SIZEOF      décalage et aller à l'état 39
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    ';'         décalage et aller à l'état 83
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 84


État 44

    3 primary_expression: '(' . expression ')'

    SIZEOF      décalage et aller à l'état 39
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 85


État 45

   14 unary_operator: '&' .

    $défaut  réduction par utilisation de la règle 14 (unary_operator)


État 46

   15 unary_operator: '*' .

    $défaut  réduction par utilisation de la règle 15 (unary_operator)


État 47

   16 unary_operator: '-' .

    $défaut  réduction par utilisation de la règle 16 (unary_operator)


État 48

   64 compound_statement: '{' '}' .

    $défaut  réduction par utilisation de la règle 64 (compound_statement)


État 49

   72 expression_statement: ';' .

    $défaut  réduction par utilisation de la règle 72 (expression_statement)


État 50

    1 primary_expression: IDENTIFIER .

    $défaut  réduction par utilisation de la règle 1 (primary_expression)


État 51

    2 primary_expression: CONSTANT .

    $défaut  réduction par utilisation de la règle 2 (primary_expression)


État 52

    4 postfix_expression: primary_expression .

    $défaut  réduction par utilisation de la règle 4 (postfix_expression)


État 53

    5 postfix_expression: postfix_expression . '(' ')'
    6                   | postfix_expression . '(' argument_expression_list ')'
    7                   | postfix_expression . '.' IDENTIFIER
    8                   | postfix_expression . PTR_OP IDENTIFIER
   11 unary_expression: postfix_expression .

    PTR_OP  décalage et aller à l'état 86
    '('     décalage et aller à l'état 87
    '.'     décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 11 (unary_expression)


État 54

   17 multiplicative_expression: unary_expression .
   36 expression: unary_expression . '=' expression

    '='  décalage et aller à l'état 89

    $défaut  réduction par utilisation de la règle 17 (multiplicative_expression)


État 55

   12 unary_expression: unary_operator . unary_expression

    SIZEOF      décalage et aller à l'état 39
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression  aller à l'état 52
    postfix_expression  aller à l'état 53
    unary_expression    aller à l'état 90
    unary_operator      aller à l'état 55


État 56

   18 multiplicative_expression: multiplicative_expression . '*' unary_expression
   19                          | multiplicative_expression . '/' unary_expression
   20 additive_expression: multiplicative_expression .

    '*'  décalage et aller à l'état 91
    '/'  décalage et aller à l'état 92

    $défaut  réduction par utilisation de la règle 20 (additive_expression)


État 57

   21 additive_expression: additive_expression . '+' multiplicative_expression
   22                    | additive_expression . '-' multiplicative_expression
   23 relational_expression: additive_expression .

    '-'  décalage et aller à l'état 93
    '+'  décalage et aller à l'état 94

    $défaut  réduction par utilisation de la règle 23 (relational_expression)


État 58

   24 relational_expression: relational_expression . '<' additive_expression
   25                      | relational_expression . '>' additive_expression
   26                      | relational_expression . LE_OP additive_expression
   27                      | relational_expression . GE_OP additive_expression
   28 equality_expression: relational_expression .

    LE_OP  décalage et aller à l'état 95
    GE_OP  décalage et aller à l'état 96
    '<'    décalage et aller à l'état 97
    '>'    décalage et aller à l'état 98

    $défaut  réduction par utilisation de la règle 28 (equality_expression)


État 59

   29 equality_expression: equality_expression . EQ_OP relational_expression
   30                    | equality_expression . NE_OP relational_expression
   31 logical_and_expression: equality_expression .

    EQ_OP  décalage et aller à l'état 99
    NE_OP  décalage et aller à l'état 100

    $défaut  réduction par utilisation de la règle 31 (logical_and_expression)


État 60

   32 logical_and_expression: logical_and_expression . AND_OP equality_expression
   33 logical_or_expression: logical_and_expression .

    AND_OP  décalage et aller à l'état 101

    $défaut  réduction par utilisation de la règle 33 (logical_or_expression)


État 61

   34 logical_or_expression: logical_or_expression . OR_OP logical_and_expression
   35 expression: logical_or_expression .

    OR_OP  décalage et aller à l'état 102

    $défaut  réduction par utilisation de la règle 35 (expression)


État 62

   73 expression_statement: expression . ';'

    ';'  décalage et aller à l'état 103


État 63

   68 declaration_list: declaration .

    $défaut  réduction par utilisation de la règle 68 (declaration_list)


État 64

   37 declaration: declaration_specifiers . declarator ';'

    '('         décalage et aller à l'état 16
    '*'         décalage et aller à l'état 17
    IDENTIFIER  décalage et aller à l'état 18

    declarator         aller à l'état 104
    direct_declarator  aller à l'état 20


État 65

   70 statement_list: statement .

    $défaut  réduction par utilisation de la règle 70 (statement_list)


État 66

   59 statement: compound_statement .

    $défaut  réduction par utilisation de la règle 59 (statement)


État 67

   66 compound_statement: '{' declaration_list . '}'
   67                   | '{' declaration_list . statement_list '}'
   69 declaration_list: declaration_list . declaration

    SIZEOF      décalage et aller à l'état 39
    EXTERN      décalage et aller à l'état 1
    INT         décalage et aller à l'état 2
    VOID        décalage et aller à l'état 3
    STRUCT      décalage et aller à l'état 4
    IF          décalage et aller à l'état 40
    WHILE       décalage et aller à l'état 41
    FOR         décalage et aller à l'état 42
    RETURN      décalage et aller à l'état 43
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    '{'         décalage et aller à l'état 30
    '}'         décalage et aller à l'état 105
    ';'         décalage et aller à l'état 49
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 62
    declaration                aller à l'état 106
    declaration_specifiers     aller à l'état 64
    type_specifier             aller à l'état 7
    struct_specifier           aller à l'état 8
    statement                  aller à l'état 65
    compound_statement         aller à l'état 66
    statement_list             aller à l'état 107
    expression_statement       aller à l'état 69
    selection_statement        aller à l'état 70
    iteration_statement        aller à l'état 71
    jump_statement             aller à l'état 72


État 68

   65 compound_statement: '{' statement_list . '}'
   71 statement_list: statement_list . statement

    SIZEOF      décalage et aller à l'état 39
    IF          décalage et aller à l'état 40
    WHILE       décalage et aller à l'état 41
    FOR         décalage et aller à l'état 42
    RETURN      décalage et aller à l'état 43
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    '{'         décalage et aller à l'état 30
    '}'         décalage et aller à l'état 108
    ';'         décalage et aller à l'état 49
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 62
    statement                  aller à l'état 109
    compound_statement         aller à l'état 66
    expression_statement       aller à l'état 69
    selection_statement        aller à l'état 70
    iteration_statement        aller à l'état 71
    jump_statement             aller à l'état 72


État 69

   60 statement: expression_statement .

    $défaut  réduction par utilisation de la règle 60 (statement)


État 70

   61 statement: selection_statement .

    $défaut  réduction par utilisation de la règle 61 (statement)


État 71

   62 statement: iteration_statement .

    $défaut  réduction par utilisation de la règle 62 (statement)


État 72

   63 statement: jump_statement .

    $défaut  réduction par utilisation de la règle 63 (statement)


État 73

   55 direct_declarator: direct_declarator '(' ')' .

    $défaut  réduction par utilisation de la règle 55 (direct_declarator)


État 74

   58 parameter_declaration: declaration_specifiers . declarator

    '('         décalage et aller à l'état 16
    '*'         décalage et aller à l'état 17
    IDENTIFIER  décalage et aller à l'état 18

    declarator         aller à l'état 110
    direct_declarator  aller à l'état 20


État 75

   54 direct_declarator: direct_declarator '(' parameter_list . ')'
   57 parameter_list: parameter_list . ',' parameter_declaration

    ')'  décalage et aller à l'état 111
    ','  décalage et aller à l'état 112


État 76

   56 parameter_list: parameter_declaration .

    $défaut  réduction par utilisation de la règle 56 (parameter_list)


État 77

   49 struct_declaration: type_specifier declarator ';' .

    $défaut  réduction par utilisation de la règle 49 (struct_declaration)


État 78

   44 struct_specifier: STRUCT IDENTIFIER '{' struct_declaration_list '}' .

    $défaut  réduction par utilisation de la règle 44 (struct_specifier)


État 79

   13 unary_expression: SIZEOF unary_expression .

    $défaut  réduction par utilisation de la règle 13 (unary_expression)


État 80

   74 selection_statement: IF '(' . expression ')' statement
   75                    | IF '(' . expression ')' statement ELSE statement

    SIZEOF      décalage et aller à l'état 39
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 113


État 81

   76 iteration_statement: WHILE '(' . expression ')' statement

    SIZEOF      décalage et aller à l'état 39
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 114


État 82

   77 iteration_statement: FOR '(' . expression_statement expression_statement expression ')' statement

    SIZEOF      décalage et aller à l'état 39
    '('         décalage et aller à l'état 44
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    ';'         décalage et aller à l'état 49
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 62
    expression_statement       aller à l'état 115


État 83

   78 jump_statement: RETURN ';' .

    $défaut  réduction par utilisation de la règle 78 (jump_statement)


État 84

   79 jump_statement: RETURN expression . ';'

    ';'  décalage et aller à l'état 116


État 85

    3 primary_expression: '(' expression . ')'

    ')'  décalage et aller à l'état 117


État 86

    8 postfix_expression: postfix_expression PTR_OP . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 118


État 87

    5 postfix_expression: postfix_expression '(' . ')'
    6                   | postfix_expression '(' . argument_expression_list ')'

    SIZEOF      décalage et aller à l'état 39
    '('         décalage et aller à l'état 44
    ')'         décalage et aller à l'état 119
    '&'         décalage et aller à l'état 45
    '*'         décalage et aller à l'état 46
    '-'         décalage et aller à l'état 47
    IDENTIFIER  décalage et aller à l'état 50
    CONSTANT    décalage et aller à l'état 51

    primary_expression         aller à l'état 52
    postfix_expression         aller à l'état 53
    argument_expression_list   aller à l'état 120
    unary_expression           aller à l'état 54
    unary_operator             aller à l'état 55
    multiplicative_expression  aller à l'état 56
    additive_expression        aller à l'état 57
    relational_expression      aller à l'état 58
    equality_expression        aller à l'état 59
    logical_and_expression     aller à l'état 60
    logical_or_expression      aller à l'état 61
    expression                 aller à l'état 121


État 88

    7 postfix_expression: postfix_expression '.' . IDENTIFIER

    IDENTIFIER  décalage et aller à l'état 122


État 89

   36 expression: unary_expression '=' . expression
